[gd_scene load_steps=6 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 968.0
margin_top = 3.0
margin_right = 1018.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="MessageLabel" type="Label" parent="."]
margin_left = 290.0
margin_top = 240.0
margin_right = 774.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 2 )
text = "Ame Run"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 423.0
margin_top = 433.0
margin_right = 623.0
margin_bottom = 483.0
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
